# birthday_helper

./: README.md  main.py  pyproject.toml  pytest.ini
src/: exceptions.py  logging.py  scheduler.py  settings.py  specs.py  utils.py
src/cloud/: storage_manager.py  sync_manager.py
src/data_processing/: atomic_operation.py  cache.py  file_handler.py  query_engine.py  test_file.xlsx
src/db/: connection.py  managers.py  models.py  repository.py  shared.py
src/handlers/: __init__.py  birthdays.py  common.py
src/state/: state_manager.py
src/task_schedule/: task_scheduler.py
src/telegram/: bot.py  middlewares.py  states.py
src/telegram/handlers/: __init__.py  birthday.py  common.py
src/telegram/keyboards/: components.py
src/telegram/messages/: birthday.py  common.py
src/toolbox/: yandex_disk.py
src/toolbox/birthdays/: __init__.py  excelparser.py  messageformat.py  messageloader.py
tests/: common.py  factories.py  test_cache.py  test_excel_file_handler.py  test_excel_file_handler2.py  test_excel_file_handler_performance.py  test_excelparser.py  test_messageformat.py  test_messageloader.py  test_models.py  test_query_engine.py  test_scheduler.py  test_utils.py  test_yandex_disk.py
tests/fixtures/: db.py  files.py  mocks.py
