[project]
name = "makobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.19.0",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.0",
    "filelock>=3.18.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "sqlalchemy>=2.0.39",
    "yadisk-async>=1.4.5",
]

[dependency-groups]
dev = [
    "faker>=37.1.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
